Bug 310583 - 4.10: KMail crashes when trying to display mail message
Summary: 4.10: KMail crashes when trying to display mail message
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-24 00:46 UTC by Jure Repinc
Modified: 2012-11-24 12:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2012-11-24 00:46:06 UTC
Application: kmail (4.10 beta1)
KDE Platform Version: 4.9.80 (Compiled from sources)
Qt Version: 4.8.3
Operating System: Linux 3.7.0-rc5 x86_64
Distribution: "NAME=Gentoo"

-- Information about the crash:
- What I was doing when the application crashed:
I just clicked on a new e-mail message to show it and KMail crashed.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fde1bcdf780 (LWP 20539))]

Thread 4 (Thread 0x7fde17328700 (LWP 20543)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:164
#1  0x000000398bb79954 in WTF::TCMalloc_PageHeap::scavengerThread (this=0x398c59a280 <WTF::pageheap_memory>) at wtf/FastMalloc.cpp:2495
#2  0x000000398bb79a69 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at wtf/FastMalloc.cpp:1618
#3  0x000000396c40901b in start_thread (arg=0x7fde17328700) at pthread_create.c:308
#4  0x000000396b8ea74d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114

Thread 3 (Thread 0x7fde16a17700 (LWP 20544)):
#0  0x00007fff5bf8560c in ?? ()
#1  0x00007fff5bf858ac in clock_gettime ()
#2  0x000000396cc045bd in __GI_clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:115
#3  0x00000039710d7c44 in do_gettime (frac=0x7fde16a16bb8, sec=0x7fde16a16bb0) at tools/qelapsedtimer_unix.cpp:123
#4  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#5  0x00000039711accad in QTimerInfoList::updateCurrentTime (this=this@entry=0x7fde10002860) at kernel/qeventdispatcher_unix.cpp:343
#6  0x00000039711ad033 in QTimerInfoList::timerWait (this=0x7fde10002860, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#7  0x00000039711abafc in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7fde16a16cac) at kernel/qeventdispatcher_glib.cpp:136
#8  0x00000039711abbad in timerSourcePrepare (source=source@entry=0x7fde10002800, timeout=timeout@entry=0x7fde16a16cac) at kernel/qeventdispatcher_glib.cpp:169
#9  0x000000396f84a096 in g_main_context_prepare (context=context@entry=0x7fde100009a0, priority=priority@entry=0x7fde16a16d08) at gmain.c:2836
#10 0x000000396f84a7db in g_main_context_iterate (context=context@entry=0x7fde100009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3126
#11 0x000000396f84a9ec in g_main_context_iteration (context=0x7fde100009a0, may_block=1) at gmain.c:3207
#12 0x00000039711ac46e in QEventDispatcherGlib::processEvents (this=0x7fde100008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#13 0x000000397117c98f in QEventLoop::processEvents (this=this@entry=0x7fde16a16e70, flags=...) at kernel/qeventloop.cpp:149
#14 0x000000397117cc70 in QEventLoop::exec (this=0x7fde16a16e70, flags=...) at kernel/qeventloop.cpp:204
#15 0x000000397107f220 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#16 0x000000397108219c in QThreadPrivate::start (arg=0xe7e650) at thread/qthread_unix.cpp:338
#17 0x000000396c40901b in start_thread (arg=0x7fde16a17700) at pthread_create.c:308
#18 0x000000396b8ea74d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114

Thread 2 (Thread 0x7fddcf8cd700 (LWP 20551)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:217
#1  0x00000039710826a2 in wait (time=30000, this=0xf4c110) at thread/qwaitcondition_unix.cpp:84
#2  QWaitCondition::wait (this=<optimized out>, mutex=0xf4c8f8, time=30000) at thread/qwaitcondition_unix.cpp:158
#3  0x0000003971075d6e in QThreadPoolThread::run (this=0xf52a90) at concurrent/qthreadpool.cpp:141
#4  0x000000397108219c in QThreadPrivate::start (arg=0xf52a90) at thread/qthread_unix.cpp:338
#5  0x000000396c40901b in start_thread (arg=0x7fddcf8cd700) at pthread_create.c:308
#6  0x000000396b8ea74d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114

Thread 1 (Thread 0x7fde1bcdf780 (LWP 20539)):
[KCrash Handler]
#6  size (this=<optimized out>) at /usr/include/qt4/QtCore/qstring.h:102
#7  Akonadi::ContactSearchJob::setQuery (this=0x209ea50, criterion=Akonadi::ContactSearchJob::Email, value=..., match=Akonadi::ContactSearchJob::ExactMatch) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999/akonadi/contact/contactsearchjob.cpp:81
#8  0x00007fddceec6a47 in MessageViewer::VcardMemento::checkEmail (this=0x187d010) at /var/tmp/portage/kde-base/kmail-9999/work/kmail-9999/plugins/messageviewer/bodypartformatter/vcardmemento.cpp:43
#9  0x00007fddceec6d4a in MessageViewer::VcardMemento::VcardMemento (this=0x187d010, emails=...) at /var/tmp/portage/kde-base/kmail-9999/work/kmail-9999/plugins/messageviewer/bodypartformatter/vcardmemento.cpp:32
#10 0x00007fddceec604a in (anonymous namespace)::Formatter::format (this=this@entry=0x1f358e0, bodyPart=bodyPart@entry=0x7fff5bf7c550, writer=0xee5730, asyncResultObserver=asyncResultObserver@entry=0xe68400) at /var/tmp/portage/kde-base/kmail-9999/work/kmail-9999/plugins/messageviewer/bodypartformatter/text_vcard.cpp:120
#11 0x00007fde1e5a4d4a in MessageViewer::ObjectTreeParser::parseObjectTreeInternal (this=this@entry=0x7fff5bf7c5c0, node=0x15c1d90, node@entry=0x1f82e80) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:328
#12 0x00007fde1e5a562f in MessageViewer::ObjectTreeParser::stdChildHandling (this=this@entry=0x7fff5bf7c830, child=0x1f82e80) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:1458
#13 0x00007fde1e5a59e0 in processMultiPartMixedSubtype (node=0x1acc8f0, this=0x7fff5bf7c830) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:1491
#14 MessageViewer::ObjectTreeParser::processMultiPartMixedSubtype (this=0x7fff5bf7c830, node=0x1acc8f0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:1480
#15 0x00007fde1e5a5063 in MessageViewer::ObjectTreeParser::parseObjectTreeInternal (this=0x7fff5bf7c830, node=0x1acc8f0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:353
#16 0x00007fde1e5d9c50 in MessageViewer::ViewerPrivate::parseContent (this=this@entry=0xe68400, content=0x1acc8f0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/viewer_p.cpp:990
#17 0x00007fde1e5db43c in MessageViewer::ViewerPrivate::displayMessage (this=this@entry=0xe68400) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/viewer_p.cpp:862
#18 0x00007fde1e5db921 in MessageViewer::ViewerPrivate::updateReaderWin (this=0xe68400) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/viewer_p.cpp:2223
#19 0x00007fde1e5de6ca in MessageViewer::ViewerPrivate::qt_static_metacall (_o=0xe68400, _c=QMetaObject::ReadProperty, _id=8, _a=0x0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999_build/messageviewer/viewer_p.moc:234
#20 0x00000039711947ff in QMetaObject::activate (sender=0xe68490, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#21 0x000000397119277c in QObject::event (this=0xe68490, e=<optimized out>) at kernel/qobject.cpp:1157
#22 0x0000003974bdbdac in QApplicationPrivate::notify_helper (this=this@entry=0x8e0840, receiver=receiver@entry=0xe68490, e=e@entry=0x7fff5bf7d270) at kernel/qapplication.cpp:4557
#23 0x0000003974be0216 in QApplication::notify (this=0x7fff5bf7d880, receiver=0xe68490, e=0x7fff5bf7d270) at kernel/qapplication.cpp:3939
#24 0x0000003000a54248 in KApplication::notify (this=0x7fff5bf7d880, receiver=0xe68490, event=0x7fff5bf7d270) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:311
#25 0x000000397117dc8d in QCoreApplication::notifyInternal (this=0x7fff5bf7d880, receiver=0xe68490, event=0x7fff5bf7d270) at kernel/qcoreapplication.cpp:915
#26 0x00000039711aea72 in sendEvent (event=0x7fff5bf7d270, receiver=<optimized out>) at kernel/qcoreapplication.h:231
#27 QTimerInfoList::activateTimers (this=0x8cf120) at kernel/qeventdispatcher_unix.cpp:611
#28 0x00000039711abde4 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#29 timerSourceDispatch (source=source@entry=0x8cf0c0) at kernel/qeventdispatcher_glib.cpp:180
#30 0x000000396f84a5b4 in g_main_dispatch (context=0x8ca170) at gmain.c:2539
#31 g_main_context_dispatch (context=context@entry=0x8ca170) at gmain.c:3075
#32 0x000000396f84a924 in g_main_context_iterate (context=context@entry=0x8ca170, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3146
#33 0x000000396f84a9ec in g_main_context_iteration (context=0x8ca170, may_block=1) at gmain.c:3207
#34 0x00000039711ac444 in QEventDispatcherGlib::processEvents (this=0x79cad0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#35 0x0000003974c7ca86 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x000000397117c98f in QEventLoop::processEvents (this=this@entry=0x7fff5bf7d500, flags=...) at kernel/qeventloop.cpp:149
#37 0x000000397117cc70 in QEventLoop::exec (this=0x7fff5bf7d500, flags=...) at kernel/qeventloop.cpp:204
#38 0x0000003971181948 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#39 0x0000000000403192 in main (argc=<optimized out>, argv=<optimized out>) at /var/tmp/portage/kde-base/kmail-9999/work/kmail-9999/kmail/main.cpp:148

Reported using DrKonqi
Comment 1 Laurent Montel 2012-11-24 09:23:01 UTC
Git commit a2ce7438f934732386d3c77ea9d4bf4f63ba5d79 by Montel Laurent.
Committed on 24/11/2012 at 10:22.
Pushed by mlaurent into branch 'master'.

Fix Bug 310583 - 4.10: KMail crashes when trying to display mail message

FIXED-IN: 4.10

M  +1    -1    plugins/messageviewer/bodypartformatter/text_vcard.cpp

http://commits.kde.org/kdepim/a2ce7438f934732386d3c77ea9d4bf4f63ba5d79
Comment 2 Jure Repinc 2012-11-24 12:48:56 UTC
Just recompiled and I can confirm it is fixed.