Fix Bug 310583 - 4.10: KMail crashes when trying to display mail message

FIXED-IN: 4.10
BUG: 310583