plugins/messageviewer/bodypartformatter/text_vcard.cpp
@@ -99,9 +99,9 @@ class Formatter : public MessageViewer::Interface::BodyPartFormatter
         if(!memento) {
 	  if(!a.emails().isEmpty()) {
             lst.append(a.emails().first());
+	    count++;
 	  }
         }
-        count++;
       }
       if ( !count ) {
         return AsIcon;
